<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/vikingstoragelogo"
        android:contentDescription="@string/storagelogo"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        android:orientation="horizontal">

    <LinearLayout
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">



    <TextView
        android:layout_width="225dp"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pianoSize"
        android:id="@+id/storagepianosize"
        android:inputType="none"
        android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/smallUpright"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/largeUpright"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/babyGrand"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/parlorGrand"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/concertGrand"/>

    </LinearLayout>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        android:layout_gravity="left">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center"
            android:text="@string/monthlyRate"
            android:id="@+id/storagemonthlyrates"
            android:inputType="none"
            android:gravity="center_vertical|center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smallUprightRate"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/largeUprightRate"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/babyGrandRate"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parlorGrandRate"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concertGrandRate"
            android:layout_margin="5dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal" />

    </LinearLayout>

    </LinearLayout>


</LinearLayout>
