<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="175dp"
            android:layout_marginTop="2dp"
            android:cropToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:src="@drawable/vikingmobilelogo"
            android:contentDescription="@string/vikingMobileLogo" />

        <Button
            android:id="@+id/imageButtonSelector"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button1"
            android:src="@drawable/button1"
            android:contentDescription="@string/aboutButton" />

        <Button
            android:id="@+id/imageButtonSelector2"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button2"
            android:src="@drawable/button2"
            android:contentDescription="@string/galleryButton" />

        <Button
            android:id="@+id/imageButtonSelector3"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button3"
            android:src="@drawable/button3"
            android:contentDescription="@string/storageButton" />

        <Button
            android:id="@+id/imageButtonSelector4"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button4"
            android:src="@drawable/button4"
            android:contentDescription="@string/callButton" />

        <Button
            android:id="@+id/imageButtonSelector5"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button5"
            android:src="@drawable/button5"
            android:contentDescription="@string/quoteButton" />

        <Button
            android:id="@+id/imageButtonSelector6"
            android:layout_width="200dip"
            android:layout_height="50dip"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button6"
            android:src="@drawable/button6"
            android:contentDescription="@string/yelpButton" />

    </LinearLayout>

</ScrollView>
